<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10px"
        android:text="@string/act_announce_please_register"
        android:textSize="32px"
        android:focusable="true" 
        android:focusableInTouchMode="true"  >
        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/txt_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_marginTop="20px"
        android:text="@string/act_txt_title_card_info"
        android:textSize="24px" 
        android:background="#aaa"
        android:textColor="#fff" />

    <LinearLayout
	    android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_card_title"
        android:padding="20px"
        android:background="#eee"  >
        
	    <RelativeLayout
	        android:id="@+id/relativeLayout1"
	        android:layout_weight="1.0"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/txt_card_title">
	
	        <!-- Card state -->
	        <TextView
	            android:id="@+id/txt_title_card_state"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="100px"
	            android:text="@string/act_txt_title_card_status"
	            android:textSize="24px" />
	        <TextView
	            android:id="@+id/txt_val_card_state"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/txt_title_card_state"
	            android:layout_marginLeft="22dp"
	            android:layout_toRightOf="@+id/txt_title_card_state"
	            android:textSize="24px"  />
	        
	        <!-- Card ID -->
	        <TextView
	            android:id="@+id/txt_title_card_id"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/txt_title_card_state"
	            android:layout_below="@+id/txt_title_card_state"
	            android:text="@string/act_txt_title_card_id"
	            android:textSize="24px" />
	        <TextView
	            android:id="@+id/txt_val_card_id"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/txt_title_card_id"
	            android:layout_alignLeft="@+id/txt_val_card_state"
	            android:layout_toRightOf="@+id/txt_title_card_id"
	            android:ellipsize="end"
	            android:singleLine="true"
	            android:textSize="24px"  />
	        
	        <!-- Support type -->
	        <TextView
	            android:id="@+id/txt_title_support_type"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/txt_title_card_state"
	            android:layout_below="@+id/txt_title_card_id"
	            android:text="@string/act_txt_title_support_type"
	            android:textSize="24px" />
	        <TextView
	            android:id="@+id/txt_val_support_type"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/txt_title_support_type"
	            android:layout_alignLeft="@+id/txt_val_card_state"
	            android:layout_toRightOf="@+id/txt_title_support_type"
	            android:ellipsize="end"
	            android:singleLine="true"
	            android:textSize="24px"  />
	        
	        <!-- Card Type -->"
	        <TextView
	            android:id="@+id/txt_title_card_type"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/txt_title_card_state"
	            android:layout_below="@+id/txt_title_support_type"
	            android:text="@string/act_txt_title_card_type"
	            android:textSize="24px" />
	        <TextView
	            android:id="@+id/txt_val_card_type"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/txt_title_card_type"
	            android:layout_alignLeft="@+id/txt_val_card_state"
	            android:layout_toRightOf="@+id/txt_title_card_type"
	            android:ellipsize="end"
	            android:singleLine="true"
	            android:textSize="24px"  />
	        
	        <!-- Device ID -->
	        <TextView
	            android:id="@+id/txt_title_device_id"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/txt_title_card_state"
	            android:layout_below="@+id/txt_title_card_type"
	            android:text="@string/act_txt_title_device_id"
	            android:textSize="24px" />
	        <TextView
	            android:id="@+id/txt_val_device_id"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/txt_title_device_id"
	            android:layout_alignLeft="@+id/txt_val_card_state"
	            android:layout_toRightOf="@+id/txt_title_device_id"
	            android:ellipsize="end"
	            android:singleLine="true"
	            android:textSize="24px"  />
	
	        <!-- Get info -->
	        <TextView
	            android:id="@+id/txt_title_info_type"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="30px"
	            android:paddingBottom="15px"
	            android:layout_alignRight="@+id/txt_title_card_state"
	            android:layout_below="@+id/txt_title_device_id"
	            android:text="@string/act_txt_title_info_type"
	            android:textSize="24px" />
	        <EditText
	            android:id="@+id/edit_info_type"
	            android:layout_width="200px"
	            android:layout_height="wrap_content"
	            android:layout_alignBottom="@+id/txt_title_info_type"
	            android:layout_alignLeft="@+id/txt_val_card_state"
	            android:layout_toRightOf="@+id/txt_title_info_type"
	            android:text="@string/act_txt_val_user_id" />
	        <Button
	            android:id="@+id/btn_get_info"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10px"
	            android:layout_alignBottom="@+id/txt_title_info_type"
	            android:layout_toRightOf="@+id/edit_info_type"
	            android:text="@string/act_btn_get_info" 
	            android:textSize="20px"
	            android:enabled="false"  />
	    </RelativeLayout>
	    
	    <ScrollView
	        android:id="@+id/ScrollView1"
            android:layout_width="400px"
            android:layout_height="fill_parent"
            android:background="#fff" >
	        <LinearLayout
	            android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/text_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"/>
	        </LinearLayout>	        
	     </ScrollView>
	
    </LinearLayout>
    

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20px"
        android:layout_marginLeft="45px"
        android:text="@string/act_btn_register"
        android:textSize="24px" />
    
    <Button
        android:id="@+id/btn_unregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_register"
        android:layout_alignBottom="@+id/btn_register"
        android:layout_marginLeft="70px"
        android:layout_toRightOf="@+id/btn_register"
        android:text="@string/act_btn_unregister"
        android:textSize="24px"
        android:enabled="false"  />

</RelativeLayout>